# janbot

./: .gitignore  BUGS  HISTORY  Makefile.in  README  TODO  chat.c  child.c  commands.c  config.c  config.h.in  configure  configure.in  ctcp.c  dcc.c  fs.c  janbot.c  janbot.h  janbot.hlp  janbot.msg  parseline.c  parser.c  sample.janbotrc  sanity.pl  server.c  stuff.c  userconv.pl  userlist.c
CVS/: Entries  Repository  Root
